# prompt-logger

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yaml  release.yaml  test.yaml
prompt_logger/: __init__.py  cli.py  export.py  logger.py  models.py  params.py  version.py
prompt_logger/models/: inference.py
tests/: requirements.txt
tests/prompt_logger/: test_cli.py  test_logger.py
